# brave-core

./: .gitattributes  Jenkinsfile  package-lock.json  package.json
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/: AndroidManifest.xml
app/: brave_generated_resources.grd  brave_strings.grd  brave_strings_override.grd  generated_resources.grd  media_live_preview_strings.grdp
browser/: about_flags.cc  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_local_state_prefs.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  sources.gni
browser/brave_shields/: ad_block_service_browsertest.cc
browser/debounce/: sources.gni
browser/ipfs/: ipfs_tab_helper_browsertest.cc
browser/misc_metrics/: process_misc_metrics.cc  process_misc_metrics.h
browser/ui/: BUILD.gn
chromium_src/: check_chromium_src_config.json5
chromium_src/ios/chrome/browser/shared/model/prefs/: BUILD.gn  DEPS  browser_prefs.mm
components/: autofill_payments_strings.grdp
ios/: BUILD.gn
ios/browser/api/ai_chat/: BUILD.gn  DEPS  ai_chat.h  ai_chat.mm  ai_chat_factory+private.h  ai_chat_factory+private.mm  ai_chat_factory.h  headers.gni
patches/: base-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-java-src-org-chromium-chrome-browser-tabbed_mode-TabbedRootUiCoordinator.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-resources-settings-settings.ts.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-browser.cc.patch  chrome-browser-ui-browser_navigator.cc.patch  chrome-browser-ui-browser_ui_prefs.cc.patch  chrome-browser-ui-tab_helpers.cc.patch  chrome-browser-ui-webui-BUILD.gn.patch  chrome-browser-ui-webui-chrome_web_ui_controller_factory.cc.patch  chrome-elevation_service-BUILD.gn.patch  chrome-elevation_service-service_main.cc.patch  chrome-installer-mini_installer-chrome.release.patch  chrome-test-BUILD.gn.patch  components-download-internal-common-download_item_impl.cc.patch  components-omnibox-browser-autocomplete_controller.cc.patch  components-sync-protocol-proto_visitors.h.patch  content-browser-renderer_host-navigation_request.cc.patch  content-browser-renderer_host-render_frame_host_impl.cc.patch  content-browser-web_contents-web_contents_impl.cc.patch  content-public-browser-content_browser_client.h.patch  content-renderer-render_frame_impl.cc.patch  content-renderer-render_thread_impl.cc.patch  extensions-browser-api-web_request-extension_web_request_event_router.cc.patch  ios-chrome-app-BUILD.gn.patch  ios-chrome-app-main_controller.mm.patch  ios-chrome-browser-shared-model-prefs-browser_prefs.mm.patch  ios-chrome-browser-sync-model-sync_service_factory.mm.patch  net-socket-socks5_client_socket.cc.patch  third_party-android_deps-BUILD.gn.patch  third_party-blink-renderer-bindings-generated_in_modules.gni.patch  third_party-blink-renderer-bindings-idl_in_modules.gni.patch  third_party-blink-renderer-core-html-html_permission_element.cc.patch  (+6 more)
renderer/: brave_content_renderer_client.cc  brave_url_loader_throttle_provider_impl.cc  sources.gni
test/: BUILD.gn
(+271 files in other folders)
