# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/components/ai_chat/core/common/buildflags/buildflags.gni")
import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
import("//brave/components/ipfs/buildflags/buildflags.gni")

group("prefs") {
  deps = [
    "//brave/components/ai_chat/core/common/buildflags",
    "//brave/components/brave_ads/core",
    "//brave/components/brave_rewards/common",
    "//brave/components/brave_sync:prefs",
    "//brave/components/brave_vpn/common/buildflags",
    "//brave/components/brave_wallet/browser",
    "//brave/components/decentralized_dns/core",
    "//brave/components/ipfs/buildflags",
    "//brave/components/l10n/common",
    "//brave/components/ntp_background_images/browser",
    "//brave/components/p3a",
    "//brave/components/p3a:buildflags",
    "//brave/components/skus/browser",
    "//brave/ios/browser/brave_stats",
  ]

  if (enable_ipfs) {
    deps += [ "//brave/components/ipfs" ]
  }

  if (enable_ai_chat) {
    deps += [
      "//brave/components/ai_chat/core/browser",
      "//brave/components/ai_chat/core/common",
    ]
  }

  if (enable_brave_vpn || enable_ai_chat) {
    deps += [ "//brave/components/skus/browser" ]
  }
}
